--- a/src/CleanArchitecture.RentAcar/Domain/Domain.csproj
+++ b/src/CleanArchitecture.RentAcar/Domain/Domain.csproj
@@ -6,4 +6,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Reference Include="Core.Persistence">
+        <HintPath>..\..\..\..\CleanArchitecture.Core\CleanArchitecture.CorePackages\Core.Persistence\bin\Debug\net7.0\Core.Persistence.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
