--- a/src/CleanArchitecture.RentAcar/Application/Application.csproj
+++ b/src/CleanArchitecture.RentAcar/Application/Application.csproj
@@ -6,4 +6,27 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Features\Brands\Commands\Delete\" />
+      <Folder Include="Features\Brands\Commands\Update\" />
+      <Folder Include="Features\Brands\Constants\" />
+      <Folder Include="Features\Brands\Profiles\" />
+      <Folder Include="Features\Brands\Queries\" />
+      <Folder Include="Features\Brands\Rules\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="12.4.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Core.Persistence">
+        <HintPath>..\..\..\..\CleanArchitecture.Core\CleanArchitecture.CorePackages\Core.Persistence\bin\Debug\net7.0\Core.Persistence.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Domain\Domain.csproj" />
+    </ItemGroup>
+
 </Project>
