--- a/src/CleanArchitecture.RentAcar/Application/Application.csproj
+++ b/src/CleanArchitecture.RentAcar/Application/Application.csproj
@@ -10,12 +10,13 @@
       <Folder Include="Features\Brands\Commands\Delete\" />
       <Folder Include="Features\Brands\Commands\Update\" />
       <Folder Include="Features\Brands\Constants\" />
-      <Folder Include="Features\Brands\Profiles\" />
       <Folder Include="Features\Brands\Queries\" />
       <Folder Include="Features\Brands\Rules\" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
       <PackageReference Include="MediatR" Version="12.4.1" />
     </ItemGroup>
 
