Brand Queries added

--- a/src/CleanArchitecture.RentAcar/WebApi/WebApi.csproj
+++ b/src/CleanArchitecture.RentAcar/WebApi/WebApi.csproj
@@ -17,4 +17,10 @@
       <ProjectReference Include="..\Persistence\Persistence.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Core.Application">
+        <HintPath>..\..\..\..\CleanArchitecture.Core\CleanArchitecture.CorePackages\Core.Application\bin\Debug\net7.0\Core.Application.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
