--- a/src/CleanArchitecture.RentAcar/Application/Application.csproj
+++ b/src/CleanArchitecture.RentAcar/Application/Application.csproj
@@ -10,7 +10,6 @@
       <Folder Include="Features\Brands\Commands\Delete\" />
       <Folder Include="Features\Brands\Commands\Update\" />
       <Folder Include="Features\Brands\Constants\" />
-      <Folder Include="Features\Brands\Queries\" />
       <Folder Include="Features\Brands\Rules\" />
     </ItemGroup>
 
@@ -18,9 +17,13 @@
       <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
       <PackageReference Include="MediatR" Version="12.4.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
+      <Reference Include="Core.Application">
+        <HintPath>..\..\..\..\CleanArchitecture.Core\CleanArchitecture.CorePackages\Core.Application\bin\Debug\net7.0\Core.Application.dll</HintPath>
+      </Reference>
       <Reference Include="Core.Persistence">
         <HintPath>..\..\..\..\CleanArchitecture.Core\CleanArchitecture.CorePackages\Core.Persistence\bin\Debug\net7.0\Core.Persistence.dll</HintPath>
       </Reference>
